@@ -20,6 +20,7 @@ perl:
   - "5.18"
   - "5.20"
   - "5.22"
+  - "5.24"
 
 script:
   - perl Makefile.PL
@@ -28,5 +29,5 @@ script:
   - make install
 
 env:
-  - ALIEN_FORCE=1
-  - ALIEN_FORCE=0
+  - ALIEN_INSTALL_TYPE=share
+  - ALIEN_INSTALL_TYPE=system
